--- a/index.html
+++ b/index.html
@@ -38,19 +38,17 @@
         <h4 class="title-card">💘little coder💘</h4>
 
         <img
-          src="83.jpg"
+          src="hys.jpg"
           class="honey"
         />
 
         <h4 class="content-card">
-          Happy Birthday Make A Wish. Dear brother, hope you receive everything
-          you wish for this year. You deserve the best! Thanks for being such a
-          great brother.💘
+          Chúc mừng ngày 8/3 chúcc các bạn nữ luôn luôn xinh đẹp trong mắt các bạn nam và thành công trong cuộc sống.💘
         </h4>
       </div>
     </div>
     <audio autoplay loop  id="playAudio">
-      <source src="nhacnen.mp3">
+      <source src="EM ĐỒNG Ý (I DO) - ĐỨC PHÚC x 911 x KHẮC HƯNG - Lu Chivas Remix - Nhạc Hot Tik Tok 2023.mp3">
     </audio>
   </body>
   <script src="config.js"></script>
