--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         />
 
         <h4 class="content-card">
-          Chúc mừng ngày 8/3 chúcc các bạn nữ luôn luôn xinh đẹp trong mắt các bạn nam và thành công trong cuộc sống.💘
+          Chúc mừng ngày 8/3 chúc các bạn nữ luôn luôn xinh đẹp trong mắt các bạn nam và thành công trong cuộc sống.💘
         </h4>
       </div>
     </div>
