--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h4 class="title-card">💘little coder💘</h4>
 
         <img
-          src="hys.jpg"
+          src="hoa.jpg"
           class="honey"
         />
 
